# Interview

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: candidate.py  files.py  hr.py  interview.py  router.py  test.py  ws.py
app/core/: config.py  deps.py  exceptions.py  response.py  security.py
app/db/: database.py  seed.py
app/models/: __init__.py  base.py  candidate.py  document.py  hr_user.py  interview.py  interview_answer.py  job.py  question.py  score_pool.py  system_settings.py
app/schemas/: candidate.py  common.py  hr.py  interview.py  score_pool.py
app/services/: asr_service.py  candidate_filter_service.py  candidate_service.py  document_service.py  hr_service.py  interview_service.py  interview_state_machine.py  llm_service.py  ocr_service.py  qualification_service.py  score_pool_service.py  tts_service.py
scripts/: init_db.py  rewrite_candidates.py  test_intelligent_filter.py  update_candidates.py  update_filter_limit.py  update_filter_percent.py  update_frontend_api.py  update_frontend_page.py  update_frontend_percent.py  update_layout.py  update_llm_limit.py  update_llm_percent.py  update_page_percent.py  update_router.py  verify_dashscope_api.py
spec/: AI面试官系统需求规格说明书V6_0-MVP版.md  AI面试官系统需求规格说明书V6_1-MVP版.md  FR-HR-004-智能筛选实现逻辑.md  FR-HR-004-智能筛选条件参考.md
tests/: test_interview_scoring.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: index.css  router.tsx
web/src/api/: candidate.ts  hr.ts  interview.ts  request.ts
web/src/layouts/: CandidateLayout.tsx  HRLayout.tsx
(+24 files in other folders)
